--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='K2JL8BRC'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K35LMode'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -160,6 +160,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .slice                        M            # /lib/systemd/system/ filz `man systemd.special` documents User&&Session or VirtualMachine&&Container Slices
 .automount                    O            # /lib/systemd/system/ filz
 .mount                                     # /etc/systemd/system/ filz
+.modes                                     # /etc/fb.modes        filz probably for: `fbset` Frame-Buffer configur8ionz with resolutionz && timingz etc.
 .message
 .mesg                                      # MEsSaGe az(ch@EmlInstantTxtMedia*) messagez
 .ch3tm                        M            # /**/*.ch3tm(chEtmz)azCheatSheet.htm HTML fylz
