K3MM1sAv:upd8d README d8VS, inserted 2 l8st kernel entries in .lrc, changed .Hrc && lodH && new a8 objects to dash instead of equal for fat-comma arrow middle-map syntax, upd8d .zshrc to have YouTube-DL U8::Upd8 Utility aliases && maybe a few LS_COLORS entries were added, 8plc had all the sS calls get a new 1st argument of double-dash to indic8 2nd holds escaped-text && is not piping through STDIN, Utl.pm had its only instance of d8colr renamed to d8c, U8.pm got a new Upd8 function that synchronizes a local ~/bin/U2bdl file with the l8st that can be downloaded from any acceptable URL && U8 also got a new Udl8 function which is starting to behave like U2b8 did but using Expect this time instead, changed almost all b8 && d8 colr command names shrink to just *8c, began filling in a bit of a8 POD at the bottom of the .pm file after crE8ing new acS apt-cache search wrapper with dpkg that aligns && colors && greps with just a g, b8.pm got a bunch of new header comments && uppercased first letters on 9 exported sequence-gener8ion functions Prim Prmz Sum8 Sumz Fact Fctz Chus Fibo Fibz && uses && ~/bin/FileNams were propag8d, && c8.pm got its d8colr renamed d8c with a new comment, oh && probably uri && some other files like tib && 8mix have just been added in ~/bin/ && sumb output;

--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='K35LMode'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K3JMKo42'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:K2GLNght on d8:K35LLDnO. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:K3FMFeet on d8:K3JMKpJ9. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -1554,9 +1554,11 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .0.0-16-generic           01;38;5;014;48;5;006
 .0.0-15-generic           01;38;5;012;48;5;006
 .0.0-13-generic           01;38;5;013;48;5;006 # BlO /boot Linux kernelz versionz 5.3.0 onward started with Ubuntu 19.10 Eoan Ermine, so dark cyan bkgr 5.0 abov
-.3.0-26-generic           01;38;5;009
-.3.0-24-generic           01;38;5;172
-.3.0-23-generic           01;38;5;011
+.3.0-42-generic           01;38;5;009
+.3.0-40-generic           01;38;5;172
+.3.0-26-generic           01;38;5;011
+.3.0-24-generic           01;38;5;010
+.3.0-23-generic           01;38;5;014
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
